Renamed DIT link in footer. Re-indented header/footer html files.

--- a/static/shared-header-footer/footer.html
+++ b/static/shared-header-footer/footer.html
@@ -1,7 +1,7 @@
 
 <footer id="footer" class="static-header-footer">
   <nav class="container">
-    <div class="link-group"><img id="footer-dit-logo" src="/static/images/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/static/images/eig-logo-stacked.svg" height="75px"/>
+    <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="75px"/>
     </div>
 <div class="link-group">
   <p id="footer-export-readiness-links" class="list-heading">Export Readiness</p>
@@ -60,13 +60,13 @@
         </li>
         <li><a href="http://export.great.gov.uk/terms-and-conditions" class="">Terms and conditions</a>
         </li>
-        <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade</a>
+        <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade on GOV.UK</a>
         </li></a>
     </li>
   </ul>
 </div>
 <div class="global-footer">
-  <p class="container"><a href="https://www.gov.uk/"><img src="/static/images/hm_government_logo_horizontal.svg" alt="HM Government"/></a><span>&copy; Crown copyright 2017. All rights reserved.</span>
+  <p class="container"><a href="https://www.gov.uk/"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government"/></a><span>&copy; Crown copyright 2017. All rights reserved.</span>
   </p>
 </div>
 </footer>
