Added missing great.gov.uk link.

--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -1,7 +1,7 @@
 <header id="header" class="static-header-footer"><a id="skip-link" href="#content" class="verbose">Skip to main content</a>
   <div id="header-bar">
     <div class="container">
-      <p class="government-links"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government logo"/><span class="partof">Part of </span><a href="/" class="partof">great.gov.uk</a>
+      <p class="government-links"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government logo"/><span class="partof">Part of </span><a href="http://great.gov.uk" class="partof">great.gov.uk</a>
       </p>
       <ul aria-label="Account links" class="navigation account-links">
         <li class="anonymous"><a href="#" class="register dead">Register</a>
