Removed 'dead' class from links.

--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -6,11 +6,11 @@
       <ul aria-label="Account links" class="navigation account-links">
         <li class="anonymous"><a href="#" class="register dead">Register</a>
         </li>
-        <li class="anonymous"><a href="#" class="signin dead">Sign in</a>
+        <li class="anonymous"><a href="#" class="signin">Sign in</a>
         </li>
-        <li class="authenticated"><a href="#" class="profile dead">Profile</a>
+        <li class="authenticated"><a href="#" class="profile">Profile</a>
         </li>
-        <li class="authenticated"><a href="#" class="signout dead">Sign out</a>
+        <li class="authenticated"><a href="#" class="signout">Sign out</a>
         </li>
       </ul><span class="greeting"></span>
     </div>
