Removed 'dead' class in header.

--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -4,7 +4,7 @@
       <p class="government-links"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government logo"/><span class="partof">Part of </span><a href="http://great.gov.uk" class="partof">great.gov.uk</a>
       </p>
       <ul aria-label="Account links" class="navigation account-links">
-        <li class="anonymous"><a href="#" class="register dead">Register</a>
+        <li class="anonymous"><a href="#" class="register">Register</a>
         </li>
         <li class="anonymous"><a href="#" class="signin">Sign in</a>
         </li>
