Updated to new header/footer

--- a/shared-header-footer/footer.html
+++ b/shared-header-footer/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer" class="static-header-footer">
   <nav class="container">
-    <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="75px"/>
+    <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="70px"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="82px"/>
     </div>
     <div class="link-group">
       <p id="footer-export-readiness-links" class="list-heading">Export Readiness</p>
@@ -48,8 +48,6 @@
   </nav>
   <div class="site-links container">
     <ul class="navigation">
-      <li><a href="http://great.gov.uk" class="">Part of great.gov.uk</a>
-      </li>
       <li><a href="http://export.great.gov.uk/about" class="">About</a>
       </li>
       <li><a href="http://contactus.trade.gov.uk" class="">Contact us</a>
@@ -63,7 +61,7 @@
     </ul>
   </div>
   <div class="global-footer">
-    <p class="container"><a href="https://www.gov.uk/"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government"/></a><span>&copy; Crown copyright 2017. All rights reserved.</span>
+    <p class="container"><span>&copy; Crown copyright 2017. All rights reserved.</span>
     </p>
   </div>
 </footer>
