--- a/static/shared-header-footer/header.html
+++ b/static/shared-header-footer/header.html
@@ -1,22 +1,28 @@
 <header id="header" class="static-header-footer"><a id="skip-link" href="#content" class="verbose">Skip to main content</a>
   <div id="header-bar">
+    <div class="container top-bar">
+      <div class="account-locale-links">
+        <ul aria-label="Account links" class="navigation account-links">
+          <li class="anonymous"><a href="#" class="register">Register</a>
+          </li>
+          <li class="anonymous"><a href="#" class="signin">Sign in</a>
+          </li>
+          <li class="authenticated"><a href="#" class="profile">Profile</a>
+          </li>
+          <li class="authenticated"><a href="#" class="signout">Sign out</a>
+          </li>
+        </ul><span class="greeting"></span>
+        <a class="language-selector" href="#">EN - UK</a>
+      </div>
+    </div>
     <div class="container">
-      <p class="government-links"><img src="/shared-header-footer/hm_government_logo_horizontal.svg" alt="HM Government logo"/><span class="partof">Part of </span><a href="http://great.gov.uk" class="partof">great.gov.uk</a>
-      </p>
-      <ul aria-label="Account links" class="navigation account-links">
-        <li class="anonymous"><a href="#" class="register">Register</a>
-        </li>
-        <li class="anonymous"><a href="#" class="signin">Sign in</a>
-        </li>
-        <li class="authenticated"><a href="#" class="profile">Profile</a>
-        </li>
-        <li class="authenticated"><a href="#" class="signout">Sign out</a>
-        </li>
-      </ul><span class="greeting"></span>
+      <a class="dit-logo" href="http://export.great.gov.uk" class="home">
+        <img src="/shared-header-footer/DfIT_WHITE_AW.png" alt="">
+      </a>
     </div>
   </div>
   <div id="header-menu">
-    <div class="container"><a href="http://export.great.gov.uk" class="home"><img src="/shared-header-footer/DfIT_WHITE_AW.png" alt="Home"/></a>
+    <div class="container">
       <nav id="menu">
         <ul class="navigation level-1">
           <li><a href="http://export.great.gov.uk">Home</a>
