Added alt attr for images. Updated content

--- a/shared-header-footer/footer.html
+++ b/shared-header-footer/footer.html
@@ -1,9 +1,9 @@
 <footer id="footer" class="static-header-footer">
   <nav class="container">
-    <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="70px"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="82px"/>
+    <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="70px" alt="Department for International Trade"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="82px" alt="Exporting is Great"/>
     </div>
     <div class="link-group">
-      <p id="footer-export-readiness-links" class="list-heading">Export Readiness</p>
+      <p id="footer-export-readiness-links" class="list-heading">Export readiness</p>
       <ul aria-labelledby="footer-export-readiness-links" class="navigation">
         <li><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a>
         </li>
