Updated scripts for django/erb versions. Changed alt text of header logo back to 'home'

--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
       <a class="dit-logo" href="http://export.great.gov.uk">
-        <img src="/shared-header-footer/DfIT_WHITE_AW.png" alt="Department for International Trade">
+        <img src="/shared-header-footer/DfIT_WHITE_AW.png" alt="Home">
       </a>
     </div>
   </div>
