Update service names in footer

--- a/shared-header-footer/footer.html
+++ b/shared-header-footer/footer.html
@@ -33,15 +33,15 @@
     <div class="link-group">
       <p id="footer-services-links" class="list-heading">Services</p>
       <ul aria-labelledby="footer-services-links" class="navigation">
-        <li><a href="http://find-a-buyer.export.great.gov.uk">Find a buyer</a>
+        <li><a href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a>
         </li>
-        <li><a href="http://selling-online-overseas.export.great.gov.uk">Selling online overseas</a>
+        <li><a href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a>
         </li>
-        <li><a href="http://opportunities.export.great.gov.uk">Export opportunities</a>
+        <li><a href="http://opportunities.export.great.gov.uk">Find export opportunities</a>
         </li>
         <li><a href="http://export.great.gov.uk/get-finance">Get finance</a>
         </li>
-        <li><a href="http://events.trade.gov.uk">Events</a>
+        <li><a href="http://events.trade.gov.uk">Attend events</a>
         </li>
       </ul>
     </div>
