Added language/link back to international page in header

--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -1,4 +1,20 @@
 <header id="header" class="static-header-footer"><a id="skip-link" href="#content" class="verbose">Skip to main content</a>
+  <section role="dialog" data-component="language-selector-dialog" data-lang="en" data-label="UK" data-name="English" class="language-selector-dialog">
+    <h2 id="great-languages-selector">Go to our international site</h2>
+    <p>The UK supports international trade and investment, and welcomes travellers and students from across the world.</p>
+    <div data-node="languages" class="languages">
+      <ul aria-labelledby="great-languages-selector" class="navigation">
+        <li><a href="http://export.great.gov.uk/international?lang=en">English (International)</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=zh">中国</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=de">Deutsch</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=ja">日本語</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=es">Español</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=fr">Français</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=pt">Português</a></li>
+        <li><a href="http://export.great.gov.uk/international?lang=ar">عربى</a></li>
+      </ul>
+    </div>
+  </section>
   <div id="header-bar">
     <div class="container top-bar">
       <div class="account-locale-links">
@@ -12,7 +28,6 @@
           <li class="authenticated"><a href="#" class="signout">Sign out</a>
           </li>
         </ul><span class="greeting"></span>
-        <a class="language-selector" href="#">EN - UK</a>
       </div>
     </div>
     <div class="container">
@@ -71,4 +86,5 @@
       </nav>
     </div>
   </div>
+
 </header>
