--- a/static/shared-header-footer/header.html
+++ b/static/shared-header-footer/header.html
@@ -1,6 +1,6 @@
 <header id="header" class="static-header-footer"><a id="skip-link" href="#content" class="verbose">Skip to main content</a>
   <section role="dialog" data-component="language-selector-dialog" data-lang="en" data-label="UK" data-name="English" class="language-selector-dialog">
-    <h2 id="great-languages-selector">Go to our international site</h2>
+    <p id="great-languages-selector">Go to our international site</p>
     <p>The UK supports international trade and investment, and welcomes travellers and students from across the world.</p>
     <div data-node="languages" class="languages">
       <ul aria-labelledby="great-languages-selector" class="navigation">
