--- a/shared-header-footer/footer.html
+++ b/shared-header-footer/footer.html
@@ -5,63 +5,43 @@
     <div class="link-group">
       <p id="footer-export-readiness-links" class="list-heading">Export readiness</p>
       <ul aria-labelledby="footer-export-readiness-links" class="navigation">
-        <li><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/regular">I&#39;m a regular exporter</a>
-        </li>
+        <li><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a></li>
+        <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a></li>
+        <li><a href="http://export.great.gov.uk/regular">I&#39;m a regular exporter</a></li>
       </ul>
     </div>
     <div class="link-group">
       <p id="footer-guidance-links" class="list-heading">Guidance</p>
       <ul aria-labelledby="footer-guidance-links" class="navigation">
-        <li><a href="http://export.great.gov.uk/market-research">Market research</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/finance">Finance</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/business-planning">Business planning</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a>
-        </li>
+        <li><a href="http://export.great.gov.uk/market-research">Market research</a></li>
+        <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a></li>
+        <li><a href="http://export.great.gov.uk/finance">Finance</a></li>
+        <li><a href="http://export.great.gov.uk/business-planning">Business planning</a></li>
+        <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a></li>
+        <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a></li>
       </ul>
     </div>
     <div class="link-group">
       <p id="footer-services-links" class="list-heading">Services</p>
       <ul aria-labelledby="footer-services-links" class="navigation">
-        <li><a href="http://opportunities.export.great.gov.uk">Find export opportunities</a>
-        </li>
-        <li><a href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a>
-        </li>
-        <li><a href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/get-finance">Get finance</a>
-        </li>
-        <li><a href="http://events.trade.gov.uk">Attend events</a>
-        </li>
+        <li><a href="http://opportunities.export.great.gov.uk">Find export opportunities</a></li>
+        <li><a href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a></li>
+        <li><a href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a></li>
+        <li><a href="http://export.great.gov.uk/get-finance">Get finance</a></li>
+        <li><a href="http://events.trade.gov.uk">Attend events</a></li>
       </ul>
     </div>
   </nav>
   <div class="site-links container">
     <ul class="navigation">
-      <li><a href="http://export.great.gov.uk/about" class="">About</a>
-      </li>
-      <li><a href="http://contactus.trade.gov.uk" class="">Contact us</a>
-      </li>
-      <li><a href="http://export.great.gov.uk/privacy-and-cookies" class="">Privacy and cookies</a>
-      </li>
-      <li><a href="http://export.great.gov.uk/terms-and-conditions" class="">Terms and conditions</a>
-      </li>
-      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade on GOV.UK</a>
-      </li>
+      <li><a href="http://export.great.gov.uk/about" class="">About</a></li>
+      <li><a href="http://contactus.trade.gov.uk" class="">Contact us</a></li>
+      <li><a href="http://export.great.gov.uk/privacy-and-cookies" class="">Privacy and cookies</a></li>
+      <li><a href="http://export.great.gov.uk/terms-and-conditions" class="">Terms and conditions</a></li>
+      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade on GOV.UK</a></li>
     </ul>
   </div>
   <div class="global-footer">
-    <p class="container"><span>&copy; Crown copyright 2017. All rights reserved.</span>
-    </p>
+    <p class="container"><span>&copy; Crown copyright 2017. All rights reserved.</span></p>
   </div>
 </footer>
