--- a/static/shared-header-footer/footer.html
+++ b/static/shared-header-footer/footer.html
@@ -3,45 +3,52 @@
     <div class="link-group"><img id="footer-dit-logo" src="/shared-header-footer/DfIT_WHITE_AW.png" height="70px" alt="Department for International Trade"/><img id="footer-eig-logo" src="/shared-header-footer/eig-logo-stacked.svg" height="82px" alt="Exporting is Great"/>
     </div>
     <div class="link-group">
-      <p id="footer-export-readiness-links" class="list-heading">Export readiness</p>
-      <ul aria-labelledby="footer-export-readiness-links" class="navigation">
-        <li><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a></li>
-        <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a></li>
-        <li><a href="http://export.great.gov.uk/regular">I&#39;m a regular exporter</a></li>
-      </ul>
+      <div>
+        <a href="http://great.gov.uk/custom">
+          <p class="list-heading" id="footer-custom-page-link">Your export journey</p>
+        </a>
+      </div>
+      <div>
+        <p id="footer-export-readiness-links" class="list-heading">Export readiness</p>
+        <ul aria-labelledby="footer-export-readiness-links" class="navigation">
+          <li><a id="footer-export-readiness-new" href="http://great.gov.uk/new">I&#39;m new to exporting</a></li>
+          <li><a id="footer-export-readiness-occasional" href="http://great.gov.uk/occasional">I export occasionally</a></li>
+          <li><a id="footer-export-readiness-regular" href="http://great.gov.uk/regular">I&#39;m a regular exporter</a></li>
+        </ul>
+      </div>
     </div>
     <div class="link-group">
       <p id="footer-guidance-links" class="list-heading">Guidance</p>
       <ul aria-labelledby="footer-guidance-links" class="navigation">
-        <li><a href="http://export.great.gov.uk/market-research">Market research</a></li>
-        <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a></li>
-        <li><a href="http://export.great.gov.uk/finance">Finance</a></li>
-        <li><a href="http://export.great.gov.uk/business-planning">Business planning</a></li>
-        <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a></li>
-        <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a></li>
+        <li><a id="footer-guidance-market-research" href="http://great.gov.uk/market-research">Market research</a></li>
+        <li><a id="footer-guidance-customer-insight" href="http://great.gov.uk/customer-insight">Customer insight</a></li>
+        <li><a id="footer-guidance-finance" href="http://great.gov.uk/finance">Finance</a></li>
+        <li><a id="footer-guidance-business-planning" href="http://great.gov.uk/business-planning">Business planning</a></li>
+        <li><a id="footer-guidance-getting-paid" href="http://great.gov.uk/getting-paid">Getting paid</a></li>
+        <li><a id="footer-guidance-operations-and-compliance" href="http://great.gov.uk/operations-and-compliance">Operations and compliance</a></li>
       </ul>
     </div>
     <div class="link-group">
       <p id="footer-services-links" class="list-heading">Services</p>
       <ul aria-labelledby="footer-services-links" class="navigation">
-        <li><a href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a></li>
-        <li><a href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a></li>
-        <li><a href="http://opportunities.export.great.gov.uk">Find export opportunities</a></li>
-        <li><a href="http://export.great.gov.uk/get-finance">Get finance</a></li>
-        <li><a href="http://events.trade.gov.uk">Attend events</a></li>
+        <li><a id="footer-services-find-a-buyer" href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a></li>
+        <li><a id="footer-services-selling-online-overseas" href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a></li>
+        <li><a id="footer-services-export-opportunities" href="http://opportunities.export.great.gov.uk">Find export opportunities</a></li>
+        <li><a id="footer-services-get-finance" href="http://great.gov.uk/get-finance">Get finance</a></li>
+        <li><a id="footer-services-events" href="http://events.trade.gov.uk">Attend events</a></li>
       </ul>
     </div>
   </nav>
   <div class="site-links container">
     <ul class="navigation">
-      <li><a href="http://export.great.gov.uk/about" class="">About</a></li>
-      <li><a href="http://contactus.trade.gov.uk" class="">Contact us</a></li>
-      <li><a href="http://export.great.gov.uk/privacy-and-cookies" class="">Privacy and cookies</a></li>
-      <li><a href="http://export.great.gov.uk/terms-and-conditions" class="">Terms and conditions</a></li>
-      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade on GOV.UK</a></li>
+      <li><a id="footer-site-links-about" href="http://great.gov.uk/about">About</a></li>
+      <li><a id="footer-site-links-contact-us" href="https://contact-us.export.great.gov.uk/directory/FeedbackForm">Contact us</a></li>
+      <li><a id="footer-site-links-privacy-and-cookies" href="http://great.gov.uk/privacy-and-cookies">Privacy and cookies</a></li>
+      <li><a id="footer-site-links-t-and-c" href="http://great.gov.uk/terms-and-conditions">Terms and conditions</a></li>
+      <li><a id="footer-site-links-dit" href="https://www.gov.uk/government/organisations/department-for-international-trade">Department for International Trade on GOV.UK</a></li>
     </ul>
   </div>
   <div class="global-footer">
-    <p class="container"><span>&copy; Crown copyright 2018. All rights reserved.</span></p>
+    <p class="container"><span id="footer-copyright">&copy; Crown copyright 2018. All rights reserved.</span></p>
   </div>
 </footer>
