--- a/static/shared-header-footer/header.html
+++ b/static/shared-header-footer/header.html
@@ -3,15 +3,15 @@
     <div class="container top-bar">
       <div class="account-locale-links">
         <ul aria-label="Account links" class="navigation account-links">
-          <li class="anonymous"><a href="#" class="register">Register</a></li>
-          <li class="anonymous"><a href="#" class="signin">Sign in</a></li>
-          <li class="authenticated"><a href="#" class="profile">Profile</a></li>
-          <li class="authenticated"><a href="#" class="signout">Sign out</a></li>
+          <li class="anonymous"><a id="header-register-link" href="#" class="register">Register</a></li>
+          <li class="anonymous"><a id="header-sign-in-link" href="#" class="signin">Sign in</a></li>
+          <li class="authenticated"><a id="header-profile-link" href="#" class="profile">Profile</a></li>
+          <li class="authenticated"><a id="header-sign-out-link" href="#" class="signout">Sign out</a></li>
         </ul><span class="greeting"></span>
       </div>
     </div>
     <div class="container">
-      <a class="dit-logo" href="http://export.great.gov.uk">
+      <a id="header-dit-logo" class="dit-logo" href="http://great.gov.uk">
         <img src="/shared-header-footer/DfIT_WHITE_AW.png" alt="Home">
       </a>
     </div>
@@ -20,32 +20,46 @@
     <div class="container">
       <nav id="menu">
         <ul class="navigation level-1">
-          <li><a href="http://export.great.gov.uk">Home</a>
+          <li>
+            <a href="http://great.gov.uk" id="header-home-link">Home</a>
+          </li>
+          <li>
+            <a href="http://great.gov.uk/custom" id="header-custom-page-link">Your export journey</a>
           </li>
           <li><a href="#export-readiness-links-list" id="export-readiness-links" class="list-header">Export readiness</a>
             <ul id="export-readiness-links-list" aria-labelledby="export-readiness-links" class="navigation level-2">
-              <li class="items-3"><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a></li>
-              <li class="items-3"><a href="http://export.great.gov.uk/occasional">I export occasionally</a></li>
-              <li class="items-3"><a href="http://export.great.gov.uk/regular">I&#39;m a regular exporter</a></li>
+              <li class="items-3"><a id="header-export-readiness-new" href="http://great.gov.uk/new">I&#39;m new to exporting</a></li>
+              <li class="items-3"><a id="header-export-readiness-occasional" href="http://great.gov.uk/occasional">I export occasionally</a></li>
+              <li class="items-3"><a id="header-export-readiness-regular" href="http://great.gov.uk/regular">I&#39;m a regular exporter</a></li>
             </ul>
           </li>
-          <li><a href="#guidance-links-list" id="guidance-links" class="list-header">Guidance</a>
-            <ul id="guidance-links-list" aria-labelledby="guidance-links" class="navigation level-2">
-              <li class="items-6"><a href="http://export.great.gov.uk/market-research">Market research</a></li>
-              <li class="items-6"><a href="http://export.great.gov.uk/customer-insight">Customer insight</a></li>
-              <li class="items-6"><a href="http://export.great.gov.uk/finance">Finance</a></li>
-              <li class="items-6"><a href="http://export.great.gov.uk/business-planning">Business planning</a></li>
-              <li class="items-6"><a href="http://export.great.gov.uk/getting-paid">Getting paid</a></li>
-              <li class="items-6"><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a></li>
+          <li><a href="#guidance-links-list" id="header-guidance-links" class="list-header">Guidance</a>
+            <ul id="guidance-links-list" aria-labelledby="header-guidance-links" class="navigation level-2">
+              <li class="items-6"><a id="header-guidance-market-research" href="http://great.gov.uk/market-research">Market research</a></li>
+              <li class="items-6"><a id="header-guidance-customer-insight" href="http://great.gov.uk/customer-insight">Customer insight</a></li>
+              <li class="items-6"><a id="header-guidance-finance" href="http://great.gov.uk/finance">Finance</a></li>
+              <li class="items-6"><a id="header-guidance-business-planning" href="http://great.gov.uk/business-planning">Business planning</a></li>
+              <li class="items-6"><a id="header-guidance-getting-paid" href="http://great.gov.uk/getting-paid">Getting paid</a></li>
+              <li class="items-6"><a id="header-guidance-operations-and-compliance" href="http://great.gov.uk/operations-and-compliance">Operations and compliance</a></li>
             </ul>
           </li>
-          <li><a href="#services-links-list" id="services-links" class="list-header">Services</a>
-            <ul id="services-links-list" aria-labelledby="services-links" class="navigation level-2">
-              <li class="items-5"><a href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a><span class="description">Get promoted internationally with a great.gov.uk trade profile</span></li>
-              <li class="items-5"><a href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a><span class="description">Find the right marketplace for your business and access special offers for sellers</span></li>
-              <li class="items-5"><a href="http://opportunities.export.great.gov.uk">Find export opportunities</a><span class="description">Find and apply for overseas opportunities</span></li>
-              <li class="items-5"><a href="http://export.great.gov.uk/get-finance">Get finance</a><span class="description">Get the finance you need to compete and grow</span></li>
-              <li class="items-5"><a href="http://events.trade.gov.uk">Attend events</a><span class="description">Sign up for networking events and trade missions</span></li>
+          <li><a href="#services-links-list" id="header-services-links" class="list-header">Services</a>
+            <ul id="services-links-list" aria-labelledby="header-services-links" class="navigation level-2">
+              <li class="items-5">
+                <a id="header-services-find-a-buyer" href="http://find-a-buyer.export.great.gov.uk">Create an export profile</a><span class="description">Get promoted internationally with a great.gov.uk trade profile</span>
+              </li>
+              <li class="items-5">
+                <a id="header-services-selling-online-overseas" href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a><span class="description">Find the right marketplace for your business and access special offers for sellers</span>
+              </li>
+              <li class="items-5">
+                <a id="header-services-export-opportunities" href="http://opportunities.export.great.gov.uk">Find export opportunities</a><span class="description">Find and apply for overseas opportunities</span>
+              </li>
+              <li class="items-5">
+                <a id="header-services-get-finance" href="http://great.gov.uk/get-finance">Get finance</a><span class="description">Get the finance you need to compete and grow</span>
+              </li>
+              <li class="items-5">
+                <a id="header-services-events" href="http://events.trade.gov.uk">Attend events</a><span class="description">Sign up for networking events and trade missions</span>
+              </li>
             </ul>
           </li>
         </ul>
