--- a/shared-header-footer/header.html
+++ b/shared-header-footer/header.html
@@ -58,7 +58,7 @@
                 <a id="header-services-get-finance" href="http://great.gov.uk/get-finance">Get finance</a><span class="description">Get the finance you need to compete and grow</span>
               </li>
               <li class="items-5">
-                <a id="header-services-events" href="http://events.trade.gov.uk">Attend events</a><span class="description">Sign up for networking events and trade missions</span>
+                <a id="header-services-events" href="http://events.trade.gov.uk">Find events and visits</a><span class="description">Attend events and see how visits by ministers can support your trade deals</span>
               </li>
             </ul>
           </li>
